tests/no_compile/bad_outer_attr.stderr
error: invalid content of mmio attribute, only expected `no_ctors`
 --> tests/no_compile/bad_outer_attr.rs:2:8
  |
2 | #[mmio(no_ctors_x)]
  |        ^^^^^^^^^^
